--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -44,7 +44,7 @@ pre {
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.5);
 
 }
 
@@ -67,9 +67,48 @@ pre {
 
 }
 #login .login-form{
-    /*display: flex;*/
-    height: 80px;
+    display: flex;
+    height: 130px;
     width: 100%;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgb(17, 98, 14);
 
+}
+#login .login-form .loginform-buttons{
+    background-color: rgba(255,0,0,0.2);
+}
+.wrapper {
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+
+.form-signin {
+    max-width: 420px;
+    padding: 30px 38px 66px;
+    margin: 0 auto;
+    background-color: #eee;
+    border: 3px dotted rgba(0,0,0,0.1);
+}
+
+.form-signin-heading {
+    text-align:center;
+    margin-bottom: 30px;
+}
+
+.form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+}
+
+input[type="text"] {
+    margin-bottom: 0px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+input[type="password"] {
+    margin-bottom: 20px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
