login and search user by login(email or number) and some test version tariff carousel

--- a/src/main/webapp/resources/css/tariffs.css
+++ b/src/main/webapp/resources/css/tariffs.css
@@ -141,3 +141,14 @@ h1 {
     margin-bottom: 0;
     color: #42b883;
 }
+
+ .example-slide {
+     align-items: center;
+     background-color: #666;
+     color: #999;
+     display: flex;
+     font-size: 1.5rem;
+     justify-content: center;
+     min-height: 10rem;
+ }
+
