--- a/src/main/webapp/resources/css/adminUsers.css
+++ b/src/main/webapp/resources/css/adminUsers.css
@@ -39,3 +39,6 @@ header {
     transition: all 0.5s ease;
     text-decoration: none;
 }
+.form button:hover,.form button:active,.form button:focus {
+    background: #107de0;
+}
