--- a/src/main/webapp/resources/css/userContracts.css
+++ b/src/main/webapp/resources/css/userContracts.css
@@ -4,7 +4,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(0,0,0,0.1);
+    /*background-color: rgba(0,0,0,0.1);*/
     width: 100%;
     height: 100%;
 }
@@ -14,7 +14,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: #ff0000;
+    /*background-color: #ff0000;*/
     width: 100%;
     /*height: 60px;*/
     margin-bottom: 10px;
@@ -28,7 +28,7 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(0,0,0,0.1);
+    /*background-color: rgba(0,0,0,0.1);*/
     width: 200px;
     height: 100px;
 }
