--- a/src/main/webapp/resources/css/userContracts.css
+++ b/src/main/webapp/resources/css/userContracts.css
@@ -22,16 +22,16 @@
 .contracts-container .one-contract:last-child {
     margin-bottom: 0px;
 }
-.contracts-container .one-contract .options-list{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    /*background-color: rgba(0,0,0,0.1);*/
-    width: 200px;
-    height: 100px;
-}
+/*.contracts-container .one-contract .options-list{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    flex-wrap: nowrap;*/
+/*    justify-content: flex-start;*/
+/*    align-items: flex-start;*/
+/*    !*background-color: rgba(0,0,0,0.1);*!*/
+/*    width: 200px;*/
+/*    height: 100px;*/
+/*}*/
 .one-contract>span {
     margin-right: 10px;
 }
