--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -8,7 +8,7 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
+figure, figcaption, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
     margin: 0;
@@ -50,7 +50,7 @@ a img {
     border: none;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+article, aside, details, figcaption, figure, header, hgroup, main, menu, nav, section, summary {
     display: block;
 }
 
@@ -61,7 +61,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 body {
-    background-color: #ecf0f1;
+    /*background-color: #ecf0f1;*/
+    /*background-color: rgb(251, 253, 253);*/
+    background-image: url("https://sun9-25.userapi.com/impg/IVHtjAfCltqHF8byCwKC34_TKC9EJKa-qErLmQ/jOuNbsGqbDQ.jpg?size=30x52&quality=96&proxy=1&sign=acff3bce67dbf9b0dbed8bbff11371d8&type=album");
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
     padding-top: 250px;
@@ -69,6 +71,7 @@ body {
     -o-transition: padding-top 0.5s ease;
     -webkit-transition: padding-top 0.5s ease;
     transition: padding-top 0.5s ease;
+    margin-bottom: auto;
 }
 
 header {
@@ -103,6 +106,7 @@ header nav {
     line-height: 60px;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.1);
+    text-decoration: none;
 }
 header nav a {
     color: #fff;
@@ -113,6 +117,7 @@ header nav a {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
+    text-decoration: none;
 }
 header nav a:hover {
     -moz-box-shadow: 0 0 0 1px #fff;
@@ -135,14 +140,21 @@ p {
 }
 
 .wrapper {
+    position: relative;
+    width: fit-content;
+    margin: 0 auto;
+}
+.wrapper-text {
     width: 800px;
     margin: 0 auto;
+    padding-bottom: 100px
 }
 
 section {
     padding: 20px;
     margin-bottom: 40px;
-    background-color: #fff;
+    margin-top: 40px;
+    background-color: rgb(83, 167, 80);
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -167,4 +179,45 @@ body.sticky-header header h1 {
     -ms-transform: scale(0, 0);
     -webkit-transform: scale(0, 0);
     transform: scale(0, 0);
+}
+a {
+    text-decoration: none; /* Отменяем подчеркивание у ссылки */
+}
+footer {
+    position: fixed; /* Фиксированное положение */
+    left: 0; bottom: 0; /* Левый нижний угол */
+    padding: 10px; /* Поля вокруг текста */
+    background-color: #39b54a; /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    width: 100%; /* Ширина слоя */
+    height: 50px;
+    z-index: 999999;
+}
+p {
+    color: white;
+    line-height: 20px;
+    margin: auto;
+}
+header nav {
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    line-height: 60px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+header nav a {
+    color: #fff;
+    display: inline-block;
+    padding: 10px 15px;
+    line-height: 1;
+    text-decoration: none;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+}
+header nav a:hover {
+    -moz-box-shadow: 0 0 0 1px #fff;
+    -webkit-box-shadow: 0 0 0 1px #fff;
+    box-shadow: 0 0 0 1px #fff;
 }
