--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -154,7 +154,7 @@ section {
     padding: 20px;
     margin-bottom: 40px;
     margin-top: 40px;
-    background-color: rgb(83, 167, 80);
+    background-color: #76b852;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -187,7 +187,7 @@ footer {
     position: fixed; /* Фиксированное положение */
     left: 0; bottom: 0; /* Левый нижний угол */
     padding: 10px; /* Поля вокруг текста */
-    background-color: #39b54a; /* Цвет фона */
+    background-color: #76b852; /* Цвет фона */
     color: #fff; /* Цвет текста */
     width: 100%; /* Ширина слоя */
     height: 50px;
