--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -66,7 +66,7 @@ body {
     background-image: url("https://sun9-25.userapi.com/impg/IVHtjAfCltqHF8byCwKC34_TKC9EJKa-qErLmQ/jOuNbsGqbDQ.jpg?size=30x52&quality=96&proxy=1&sign=acff3bce67dbf9b0dbed8bbff11371d8&type=album");
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
-    padding-top: 250px;
+    padding-top: 200px;
     -moz-transition: padding-top 0.5s ease;
     -o-transition: padding-top 0.5s ease;
     -webkit-transition: padding-top 0.5s ease;
@@ -117,7 +117,6 @@ header nav a {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
-    text-decoration: none;
 }
 header nav a:hover {
     -moz-box-shadow: 0 0 0 1px #fff;
@@ -206,18 +205,32 @@ header nav {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.1);
 }
-header nav a {
-    color: #fff;
-    display: inline-block;
-    padding: 10px 15px;
-    line-height: 1;
-    text-decoration: none;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-}
+/*header nav a {*/
+/*    color: #fff;*/
+/*    display: inline-block;*/
+/*    padding: 10px 15px;*/
+/*    line-height: 1;*/
+/*    text-decoration: none;*/
+/*    -moz-border-radius: 2px;*/
+/*    -webkit-border-radius: 2px;*/
+/*    border-radius: 2px;*/
+/*}*/
 header nav a:hover {
     -moz-box-shadow: 0 0 0 1px #fff;
     -webkit-box-shadow: 0 0 0 1px #fff;
     box-shadow: 0 0 0 1px #fff;
+}
+nav {
+    position: absolute;
+    text-decoration: none;
+    bottom: 0;
+    height: 60px;
+    line-height: 60px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+a {
+    color: white;
+    text-decoration: none;
+    /*background-color: transparent;*/
 }
