--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -63,8 +63,8 @@ article, aside, details, figcaption, figure, header, hgroup, main, menu, nav, se
 
 body {
     /*background-color: #ecf0f1;*/
-    /*background-color: rgb(251, 253, 253);*/
-    background-image: url("https://sun9-25.userapi.com/impg/IVHtjAfCltqHF8byCwKC34_TKC9EJKa-qErLmQ/jOuNbsGqbDQ.jpg?size=30x52&quality=96&proxy=1&sign=acff3bce67dbf9b0dbed8bbff11371d8&type=album");
+    background-color: rgb(251, 253, 253);
+    /*background-image: url("https://sun9-25.userapi.com/impg/IVHtjAfCltqHF8byCwKC34_TKC9EJKa-qErLmQ/jOuNbsGqbDQ.jpg?size=30x52&quality=96&proxy=1&sign=acff3bce67dbf9b0dbed8bbff11371d8&type=album");*/
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
     padding-top: 200px;
@@ -78,7 +78,8 @@ body {
 header {
     width: 100%;
     height: 200px; /*tut */
-    background-color: #76b852; /* #3498db;*/
+    /*background-color: #76b852; !* #3498db;*!*/
+    background-color: #3498db;
     text-align: center;
     position: relative;
     position: fixed;
