--- a/src/main/webapp/resources/css/account.css
+++ b/src/main/webapp/resources/css/account.css
@@ -1,6 +1,6 @@
 th {
     background-color: #76b852;
-    color: #FFFFFF;
+    color: #000000;
 }
 header nav {
     position: absolute;
@@ -35,7 +35,7 @@ header nav a:hover {
 .table td {
     padding: 0.75rem;
     vertical-align: top;
-    border-top: 1px solid #eceeef;
+    border-top: 1px solid #000000;
 }
 
 .table thead th {
@@ -551,5 +551,11 @@ input[type="button"].btn-block {
     width: 100%;
 }
 #hello-fullname {
-    color: #FFFFFF;
+    color: #000000;
+}
+caption, th, td {
+    text-align: left;
+    font-weight: normal;
+    vertical-align: middle;
+    color: #000000;
 }
