--- a/src/main/webapp/resources/css/adminAccount.css
+++ b/src/main/webapp/resources/css/adminAccount.css
@@ -1,6 +1,6 @@
 th {
-    background-color: #3498db;
-    color: #000000;
+    background-color: rgb(42,52,57);
+    color: #ffffff;
 }
 .table {
     width: 100%;
