fix error options association and modal information about options

--- a/src/main/webapp/resources/css/adminAccount.css
+++ b/src/main/webapp/resources/css/adminAccount.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu);
 th {
     background-color: rgb(42,52,57);
     color: #ffffff;
@@ -164,4 +165,18 @@ th {
 
 .table-responsive.table-bordered {
     border: 0;
+}
+input[type=submit]{
+    /*width: 15px;*/
+    /*position: absolute;*/
+    right: 20px;
+    bottom: 20px;
+    background: #3498db;
+    color: #ffffff;
+    font-family: "Ubuntu";
+    height: 30px;
+    /*-webkit-border-radius: 15px;*/
+    /*-moz-border-radius: 15px;*/
+    /*border-radius: 15px;*/
+    border: 1px solid #0b22a9;
 }
