--- a/src/main/webapp/resources/css/account.css
+++ b/src/main/webapp/resources/css/account.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu);
 th {
     background-color: #3498db;
     color: #000000;
@@ -558,4 +559,18 @@ caption, th, td {
     font-weight: normal;
     vertical-align: middle;
     color: #000000;
+}
+input[type=submit]{
+    /*width: 15px;*/
+    /*position: absolute;*/
+    right: 20px;
+    bottom: 20px;
+    background: #3498db;
+    color: #ffffff;
+    font-family: "Ubuntu";
+    height: 30px;
+    /*-webkit-border-radius: 15px;*/
+    /*-moz-border-radius: 15px;*/
+    /*border-radius: 15px;*/
+    border: 1px solid #0b22a9;
 }
