--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -240,3 +240,17 @@ a {
     color: #000000;
 
 }
+.one-option{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    /*background-color: #ff0000;*/
+    width: 100%;
+    /*height: 60px;*/
+    margin-bottom: 10px;
+}
+.one-option>span {
+    margin-right: 10px;
+}
