--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -2,7 +2,7 @@ section {
     padding: 20px;
     margin-bottom: 40px;
     margin-top: 40px;
-    background-color: rgb(83, 167, 80);
+    background-color:#3498db;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
