--- a/src/main/webapp/resources/css/jqvmap.css
+++ b/src/main/webapp/resources/css/jqvmap.css
@@ -74,7 +74,7 @@ body {
 header {
 	width: 100%;
 	height: 200px; /*tut */
-	background-color: #76b852; /* #3498db;*/
+	background-color: #3498db; /* #3498db;*/
 	text-align: center;
 	position: relative;
 	position: fixed;
@@ -161,7 +161,7 @@ body.sticky-header {
 body.sticky-header header {
 	height: 60px;
 	/*background-color: rgba(52, 152, 219, 0.9);*/
-	background-color: rgb(83, 167, 80);
+	background-color: #3498db;
 }
 body.sticky-header header h1 {
 	-moz-transform: scale(0, 0);
