--- a/src/main/webapp/resources/css/adminUsers.css
+++ b/src/main/webapp/resources/css/adminUsers.css
@@ -71,3 +71,12 @@ input[type=form-data]{
     /*border-radius: 15px;*/
     border: 1px solid #0b22a9;
 }
+#options-block span {
+    display: block;
+}
+/*#one-contract span {*/
+/*    display: block;*/
+/*}*/
+#tariffs-choose span{
+    display: inline;
+}
